--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </script>
 </head>
 <body onselectstart="return false">
-  <a id="github" style="position: absolute; top: 0; right: 0; border: 0" href="https://github.com/szimek/signature_pad">
+  <a id="github" style="position: absolute; top: 0; right: 0; border: 0" href="https://github.com/Dborah/e-signature">
     <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
   </a>
 
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  <script src="js/signature_pad.umd.js"></script>
+  <script src="js/signature_pad.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
